--- a/TPS_ClinicaPyM/src/Formularios/Recetas.form
+++ b/TPS_ClinicaPyM/src/Formularios/Recetas.form
@@ -94,7 +94,7 @@
                       </Group>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" alignment="1" attributes="0">
-                              <EmptySpace pref="13" max="32767" attributes="0"/>
+                              <EmptySpace max="32767" attributes="0"/>
                               <Component id="lblFechaIngreso3" min="-2" max="-2" attributes="0"/>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Component id="txtTotal" min="-2" pref="497" max="-2" attributes="0"/>
