--- a/TPS_ClinicaPyM/src/Formularios/pnlConsulta.form
+++ b/TPS_ClinicaPyM/src/Formularios/pnlConsulta.form
@@ -970,6 +970,9 @@
                       <Font name="Arial" size="12" style="0"/>
                     </Property>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cmbConsultaTipoActionPerformed"/>
+                  </Events>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
                       <AbsoluteConstraints x="140" y="190" width="170" height="40"/>
